# automotions

./: README.md  main.py  pyproject.toml
app/: __init__.py  app.py  motions.py  reader.py  types.py
app/interface/: __init__.py  tui.py  types.py
src/app/: cli.py  tui.py  types.py  utils.py
src/app/interface/: __init__.py  cli.py  types.py
