[project]
name = "automotions"
version = "0.1.0"
description = "Automatically fetches motion statistics data from tabbycat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "inquirerpy>=0.3.4",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "yaspin>=3.3.0",
]

[project.scripts]
automotions-tui = "app.tui:main"
automotions-cli = "app.cli:main"

[tool.uv]
package = true